# Crypto

./: .gitignore  Cargo.toml  unnamed.patch
LOK197/: Cargo.toml
LOK197/examples/: encrypt_demo.rs
LOK197/src/: lib.rs
LOK197/src/crypto/: f_function.rs  key_schedule.rs  loki97.rs  mod.rs  permutation.rs  sboxes.rs
LOK197/tests/: f_function_tests.rs  key_schedule_tests.rs  loki97_cipher_tests.rs  sboxes_tests.rs
Twofish/: Cargo.toml
Twofish/examples/: encrypt_demo.rs
Twofish/src/: lib.rs
Twofish/src/crypto/: gf256.rs  key_schedule.rs  mds.rs  mod.rs  pht.rs  sboxes.rs  twofish.rs  utils.rs
Twofish/tests/: gf256.rs  integration_tests.rs  key_schedule.rs  mds.rs  pht.rs  sboxes.rs  twofish.rs  utils.rs
aes/: Cargo.toml
aes/examples/: demo.rs
aes/src/: lib.rs
aes/src/gf/: arithmetic.rs  irreducible.rs  mod.rs
aes/src/rijndael/: cipher.rs  key_schedule.rs  mod.rs  sbox.rs
aes/tests/: test_arithmetic.rs  test_cipher.rs  test_irreducible.rs  test_key_schedule.rs  test_sbox.rs
lab_1/: Cargo.toml
lab_1/examples/: encrypt_file.rs  encrypt_random.rs  encrypt_text.rs
lab_1/src/crypto/: cipher_context.rs  cipher_traits.rs  cipher_types.rs  deal.rs  des.rs  des_adapter.rs  encryption_transformation.rs  feistel_network.rs  key_expansion.rs  mod.rs  utils.rs
lab_1/tests/: test_utils.rs
messenger/: Cargo.toml  flake.nix
messenger/cli_client/: Cargo.toml
messenger/cli_client/src/: main.rs
messenger/gui_client/: Cargo.toml
messenger/gui_client/src/: app.rs  crypto.rs  db.rs  handlers.rs  main.rs  messages.rs  network.rs  state.rs
messenger/gui_client/src/ui/: chat_view.rs  connection_view.rs  lobby_view.rs  mod.rs
messenger/libs/dh_crypto/: Cargo.toml
messenger/libs/dh_crypto/examples/: dh_demo.rs
messenger/libs/dh_crypto/src/: lib.rs
messenger/libs/dh_crypto/src/crypto/: diffie_hellman_algorithm.rs  key_exchange_traits.rs  mod.rs
messenger/libs/loki97_crypto/: Cargo.toml
messenger/libs/loki97_crypto/src/: lib.rs
messenger/libs/loki97_crypto/src/crypto/: f_function.rs  key_schedule.rs  loki97.rs  mod.rs  permutation.rs  sboxes.rs
messenger/libs/messenger_protos/: Cargo.toml  build.rs
messenger/libs/messenger_protos/proto/: messenger.proto
messenger/libs/messenger_protos/src/: lib.rs
messenger/libs/symmetric_cipher/: Cargo.toml
messenger/libs/symmetric_cipher/src/: lib.rs
messenger/libs/symmetric_cipher/src/crypto/: cipher_io.rs  cipher_types.rs  deal.rs  deal_key_expansion.rs  des.rs  des_adapter.rs  des_key_expansion.rs  des_tables.rs  des_transformation.rs  encryption_transformation.rs  feistel_network.rs  key_expansion.rs  mod.rs  utils.rs
messenger/libs/symmetric_cipher/tests/: test_cipher_context.rs  test_des.rs  test_des_key_expansion.rs  test_des_transformation.rs  test_utils.rs  tests_feistel_network.rs
messenger/libs/twofish_crypto/: Cargo.toml
messenger/libs/twofish_crypto/src/: lib.rs
messenger/libs/twofish_crypto/src/crypto/: key_schedule.rs  mds.rs  mod.rs  pht.rs  sboxes.rs  twofish.rs  utils.rs
messenger/server/: Cargo.toml
messenger/server/src/: chat_manager.rs  lib.rs  main.rs  service.rs
rsa/: Cargo.toml
rsa/examples/: example.rs
rsa/src/: lib.rs  number_theory.rs
rsa/src/attacks/: fermat.rs  mod.rs  wiener.rs
rsa/src/primality/: fermat.rs  miller_rabin.rs  mod.rs  solovay_strassen.rs
rsa/src/rsa/: keygen.rs  mod.rs  rsa.rs
rsa/tests/: test.rs  test_number_theory.rs
rsa/tests/test_attacks/: fermat.rs  mod.rs  wiener.rs
rsa/tests/test_primality/: fermat.rs  miller_rabin.rs  mod.rs  solovay_strassen.rs
rsa/tests/test_rsa/: keygen.rs  mod.rs  rsa.rs
symmetric_cipher/: .gitignore  Cargo.toml
symmetric_cipher/benches/: cipher_bench.rs  encrypt_file_bench.rs  encrypt_random_bench.rs  encrypt_text_bench.rs
symmetric_cipher/examples/: encrypt_file.rs  encrypt_random.rs  encrypt_text.rs
symmetric_cipher/src/crypto/: cipher_context.rs  cipher_io.rs  cipher_traits.rs  cipher_types.rs  deal.rs  deal_key_expansion.rs  des.rs  des_adapter.rs  des_key_expansion.rs  des_tables.rs  des_transformation.rs  feistel_network.rs  mod.rs  utils.rs
symmetric_cipher/tests/: test_cipher_context.rs  test_deal.rs  test_des.rs  test_des_key_expansion.rs  test_des_transformation.rs  test_utils.rs  tests_feistel_network.rs
